# ShturmEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ShturmEngine.sln
Engine/: CMakeLists.txt
Engine/AssetStore/: AssetStore.cpp  AssetStore.h
Engine/Components/: AnimationComponent.h  BoxColliderComponent.h  RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
Engine/ECS/: ECS.cpp  ECS.h
Engine/Game/: Game.cpp  Game.h
Engine/Logger/: LoggerMacro.h
Engine/Systems/: AnimationSystem.h  CollisionSystem.h  MovementSystem.h  RenderColliderSystem.h  RenderSystem.h
Game/: CMakeLists.txt  Main.cpp
ShturmEngine/: ShturmEngine.vcxproj  ShturmEngine.vcxproj.filters
ShturmEngine/Source/: Game.cpp  Game.h  Main.cpp
ShturmEngine/Source/Logger/: Logger.cpp  Logger.h
